fixed comma error in package.js, works locally, troubling

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "node server.js"
   },
   "author": "Jose G. Annunziato",
-  "license": "ISC"
+  "license": "ISC",
   "keywords": [
     "OpenShift",
     "Node.js",
